@@ -1,9 +1,10 @@
 Release 4.28:
+	- don't fall back to CSV if we have a MIME type or file extension that's not in the allow list (which is fairly liberal)
+	- change behaviour of ReplaceDataFilter so that with a map, it stops after the first successful replacement for each value
+	- speed up ReplaceDataFilter by precompiling matching column indices for each pattern/replacement
 	- simplify Excel handling to remove dependency on mmap and tmpfile
-	- speed up ReplaceDataFilter
 	- add patch from wynnw to fix crash reading some local files
 	- fixed issue where libhxl can't read directly from sys.stdin
-	- don't fall back to CSV if we have a MIME type or file extension that's not in the allow list (which is fairly liberal)
 
 2022-12-12 Release 4.27.3
 	- decreasing log level to reduce the amount of logs generated by the HXL Proxy (in prod)
